Corrected centering issues and span spacing in header

--- a/Capstone.Web/Content/Site.css
+++ b/Capstone.Web/Content/Site.css
@@ -483,9 +483,9 @@ footer {
     font-family: 'Bangla MN';
 }
 
-.container {
+/*.container {
     text-align: center;
-}
+}*/
 
 #panorama {
     /*width: 800px;*/
